major refactoring around mapping and download controllers, services, DTOs, etc (wip)